# StudyNotes

./: README.md
Codec/: ffmpeg命令行.md  libavc命令行.md  openh264命令行.md  openh264和x264性能比较.md  x264命令行.md
EffectiveC++/: 00-ExamsKeys.md  01_C语言基础.md  02_C++语言基础.md  03_C++模板.md  04_STL基础.md  05_系统命令.md  06_GTEST白盒用例.md  07_GDB入门.md
HwCloud/: linux cpu性能查看cpufreq.md  linux配置.md  open_source配置.md
Jenkins/: yolomouse.rar
LeetCode/: 1000.合并石头的最低成本.c  1006.笨阶乘.cpp  1143.最长公共子序列.cpp  1172.餐盘栈.c  1187.使数组严格递增.cpp  (+40 more)
XCode/: 01_datatype.cpp  02_constexpr.cpp  03_class_base.cpp  CMakeLists.txt  CMakePresets.json  demo_common.h
XCode/EffectiveC++/: 00-ExamsKeys.md  01_C语言基础.md  03_C++模板.md  04_STL基础.md  05_系统命令.md  06_GTEST白盒用例.md  07_GDB入门.md
XCode/EffectiveC++/02_C++基础/: 00_C++语言基础.md  01_构造析构.md  03_作用域可见性生存期友元.md  04_预编译编译汇编链接.md  07_继承派生.md
XCode/KeyPoint/: dfs_bfs_datastruct.md  priority_queue.md  vector.md
XCode/LeetCode/: 1000.合并石头的最低成本.c  1006.笨阶乘.cpp  1143.最长公共子序列.cpp  1172.餐盘栈.c  1289.下降路径最小和-ii.cpp  1324.竖直打印单词.c  1338.数组大小减半.cpp  1387.将整数按权重排序.cpp  1396.设计地铁系统.c  15.三数之和.cpp  150.逆波兰表达式求值.cpp  153.寻找旋转排序数组中的最小值.cpp  1561.你可以获得的最大硬币数目.cpp  1594.矩阵的最大非负积.cpp  174.地下城游戏.cpp  18.四数之和.cpp  198.打家劫舍.c  264.丑数-ii.cpp  279.完全平方数.c  303.区域和检索-数组不可变.c  312.戳气球.c  328.奇偶链表.cpp  343.整数拆分.c  357.计算各个位数不同的数字个数.cpp  368.最大整除子集.c  403.青蛙过河.c  410.分割数组的最大值.c  472.连接词.cpp  474.一和零.c  561.数组拆分-i.cpp  567.字符串的排列.cpp  61.旋转链表.cpp  740.删除与获得点数.cpp  781.森林中的兔子.cpp  790.多米诺和托米诺平铺.cpp  812.最大三角形面积.cpp  815.公交路线.cpp  82.删除排序链表中的重复元素-ii.cpp  83.删除排序链表中的重复元素.cpp  831.隐藏个人信息.cpp  (+3 more)
(+52 files in other folders)
